Fix v0.14.2 Checkbox Alignment Errors

--- a/SCSS/ITS Theme/_Lists - Bull & Num.scss
+++ b/SCSS/ITS Theme/_Lists - Bull & Num.scss
@@ -7,17 +7,12 @@ li::marker,
     color: transparent;
 }
 /*Lighten Numbered List Marker Color*/
-ol li::marker {
-    color: var(--headers);
-}
+ol li::marker { color: var(--headers); }
 
 /*Bullet Shape*/
 ul:nth-child(odd), ul:nth-child(even) {
     list-style-type: "";
 }
-// .cm-s-obsidian span.cm-formatting-list.cm-formatting-list-ul {
-//     color: transparent;
-// }
 
 ul li::before {
     content: var(--bullet);
@@ -30,61 +25,47 @@ ul li::before {
     margin-bottom: auto;
     font-size: var(--f-text);
 }
-ul li:nth-child(even)::before {
-    color: var(--accent2);
-}
+ul li:nth-child(even)::before { color: var(--accent2); }
 li.task-list-item::before,
 .markdown-preview-view ol > li::before {
     visibility: collapse;
 }
-ol ul > li::before {
-    visibility: visible;
-}
+ol ul > li::before { visibility: visible; }
 
 /*Smaller Indentation*/
 ul, ol { 
     padding-inline-start: 25px;
-    /*margin-block-start: 0;*/
+}
+ul > li.task-list-item .task-list-item-checkbox {
+    margin-left: -27px;
 }
 .markdown-preview-view ol > li.task-list-item {
     padding-left: 10px;
 }
-.markdown-preview-view ul > li.task-list-item {
-    list-style: none;
-    text-indent: calc(var(--f-s-nt) * -1.6);
-}
-/*Checkbox: Fix Spaced Checkboxes*/
-.markdown-preview-view ul li.task-list-item > p 
-{ text-indent: -25px; }
-.markdown-preview-view ul > li.task-list-item 
-{ padding-left: 5px; }
-/*Checkbox: Fix Tags On Space Checkbox*/
-.markdown-preview-view ul li.task-list-item > p > a 
-{ text-indent: 0px; }
+// .markdown-preview-view ul > li.task-list-item { list-style: none; }
+
 
 /*Fix breaking when Space in between Lists*/
-ul li.task-list-item > p {
-    margin-block-end: unset;
-}
-ul li > p {
-    margin-block-end: unset;
-}
+ul li.task-list-item > p { margin-block-end: unset; }
+ul li > p { margin-block-end: unset; }
 
-/*-Bullet Points-*/
+
+
+
 /*Editor Bullet Points*/
 .markdown-source-view.mod-cm6 .list-bullet::after,
-.cm-s-obsidian span.cm-formatting-list-ul::before,
-.cm-s-obsidian span.cm-formatting-list-ol::before {
+.cm-s-obsidian span:is(.cm-formatting-list-ul, .cm-formatting-list-ol)::before {
     color: var(--soft-text);
 }
-/*Live Preview List Adjustment*/
+/*List Adjustment*/
 .markdown-source-view.mod-cm6 .list-bullet::after,
 .markdown-source-view:not(.is-live-preview) .cm-formatting-list-ul::before {
     content: var(--bullet);
     font-family: var(--bul-f);
-    padding-left: 5px; 
-    margin-right: -10px;
+    margin-right: -11px;
 }
+
+// Live Preview List Alignment
 .markdown-source-view.mod-cm6 .list-bullet::after
 { padding-left: 0; margin-right: 0; }
 .markdown-source-view.mod-cm6 .list-bullet {
@@ -98,23 +79,22 @@ ul li > p {
 .cm-s-obsidian.is-live-preview span.cm-formatting-list-ol {
     padding-left: 5px;
 }
+// Fix for Numbered Lists sub ol with numbered checkbox
+ol.contains-task-list li > .task-list-item-checkbox {
+    margin-left: -5px;
+    margin-right: 5px;
+}
 
 /*Editor Bullet Lines*/
 .cm-hmd-list-indent .cm-tab {
     position: relative;
 }
-.cm-hmd-list-indent .cm-tab::before {
-    content:'';
-    border-left: var(--b-line) solid var(--accent);
-    position: absolute;
-    left: .7em;
-    top: -5px;
-    bottom: -4px; 
+.markdown-source-view.mod-cm6 .cm-indent::before {
+    border-color: var(--table);
+    border-width: var(--b-line);
+    width: 7px;
 }
-
-.cm-s-obsidian .HyperMD-list-line {
-    padding-top: 0;
-}
+.cm-s-obsidian .HyperMD-list-line { padding-top: 0; }
 
 /*Preview Bullet Lines*/
 /*Bullet Line New*/
