--- a/obsidian.css
+++ b/obsidian.css
@@ -4043,30 +4043,14 @@ ol ul > li::before {
 /*Smaller Indentation*/
 ul, ol {
   padding-inline-start: 25px;
-  /*margin-block-start: 0;*/
+}
+
+ul > li.task-list-item .task-list-item-checkbox {
+  margin-left: -27px;
 }
 
 .markdown-preview-view ol > li.task-list-item {
   padding-left: 10px;
-}
-
-.markdown-preview-view ul > li.task-list-item {
-  list-style: none;
-  text-indent: calc(var(--f-s-nt) * -1.6);
-}
-
-/*Checkbox: Fix Spaced Checkboxes*/
-.markdown-preview-view ul li.task-list-item > p {
-  text-indent: -25px;
-}
-
-.markdown-preview-view ul > li.task-list-item {
-  padding-left: 5px;
-}
-
-/*Checkbox: Fix Tags On Space Checkbox*/
-.markdown-preview-view ul li.task-list-item > p > a {
-  text-indent: 0px;
 }
 
 /*Fix breaking when Space in between Lists*/
@@ -4078,21 +4062,18 @@ ul li > p {
   margin-block-end: unset;
 }
 
-/*-Bullet Points-*/
 /*Editor Bullet Points*/
 .markdown-source-view.mod-cm6 .list-bullet::after,
-.cm-s-obsidian span.cm-formatting-list-ul::before,
-.cm-s-obsidian span.cm-formatting-list-ol::before {
+.cm-s-obsidian span:is(.cm-formatting-list-ul, .cm-formatting-list-ol)::before {
   color: var(--soft-text);
 }
 
-/*Live Preview List Adjustment*/
+/*List Adjustment*/
 .markdown-source-view.mod-cm6 .list-bullet::after,
 .markdown-source-view:not(.is-live-preview) .cm-formatting-list-ul::before {
   content: var(--bullet);
   font-family: var(--bul-f);
-  padding-left: 5px;
-  margin-right: -10px;
+  margin-right: -11px;
 }
 
 .markdown-source-view.mod-cm6 .list-bullet::after {
@@ -4113,18 +4094,20 @@ ul li > p {
   padding-left: 5px;
 }
 
+ol.contains-task-list li > .task-list-item-checkbox {
+  margin-left: -5px;
+  margin-right: 5px;
+}
+
 /*Editor Bullet Lines*/
 .cm-hmd-list-indent .cm-tab {
   position: relative;
 }
 
-.cm-hmd-list-indent .cm-tab::before {
-  content: "";
-  border-left: var(--b-line) solid var(--accent);
-  position: absolute;
-  left: 0.7em;
-  top: -5px;
-  bottom: -4px;
+.markdown-source-view.mod-cm6 .cm-indent::before {
+  border-color: var(--table);
+  border-width: var(--b-line);
+  width: 7px;
 }
 
 .cm-s-obsidian .HyperMD-list-line {
